added constrain in models, refactoring, new tests
